kubernetes/apps/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    name: home-assistant
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
