kubernetes/apps/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.9.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 6
            periodSeconds: 10
          volumeMounts:
            - name: config-storage
              mountPath: /config
            - name: home-assistant-config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: home-assistant-config
              mountPath: /config/scripts.yaml
              subPath: scripts.yaml
              readOnly: true
            - name: home-assistant-config
              mountPath: /config/scenes.yaml
              subPath: scenes.yaml
              readOnly: true
            - name: home-assistant-secrets
              mountPath: /config/secrets.yaml
              subPath: secrets.yaml
              readOnly: true
            - name: home-assistant-packages
              mountPath: /config/packages
              readOnly: true
            - name: home-assistant-storage
              mountPath: /config/.storage/onboarding
              subPath: onboarding
              readOnly: true
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: home-assistant-config
          configMap:
            name: home-assistant-config
        - name: home-assistant-secrets
          secret:
            secretName: home-assistant-secrets
        - name: home-assistant-packages
          configMap:
            name: home-assistant-packages
        - name: home-assistant-storage
          configMap:
            name: home-assistant-storage
